# libhstar

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  package.json  requirements.txt  setup.py
src/: CMakeLists.txt  cli.c  engine.c  engine.h  engine.py  engine_test.c  io.h  test_engine.py
